force-app/main/default/objects/Animal__c/fields/Adopter__c.field-meta.xml
<CustomField>
    <fullName>Adopter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adopter</label>
    <referenceTo>Adopter__c</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>