force-app/main/default/objects/Animal__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>Dog&apos;s breed</description>
    <inlineHelpText>Dog&apos;s breed</inlineHelpText>
    <label>Breed</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>