force-app/main/default/objects/Animal__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <description>Sum of the animal&apos;s expenses</description>
    <inlineHelpText>Sum of the animal&apos;s expenses</inlineHelpText>
    <label>Expenses</label>
    <summarizedField>Cost__c.Value__c</summarizedField>
    <summaryForeignKey>Cost__c.Animal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>