force-app/main/default/objects/Animal__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Animal Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teacup: up to 2,5 kg</fullName>
            </value>
            <value>
                <fullName>Toy: 2,6 to 5 kg</fullName>
            </value>
            <value>
                <fullName>Small: 5,1 to 10 kg</fullName>
            </value>
            <value>
                <fullName>Medium: 10,1 to 25 kg</fullName>
            </value>
            <value>
                <fullName>Large: 25,1 to 45 kg</fullName>
            </value>
            <value>
                <fullName>Extra Large: 45,1 to 100 kg</fullName>
            </value>
            <value>
                <fullName>Giant: over 100 kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>