force-app/main/default/objects/Animal__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rescued</fullName>
            </value>
            <value>
                <fullName>Medical Care</fullName>
            </value>
            <value>
                <fullName>ReadyForAdoption</fullName>
                <label>Ready For Adoption</label>
            </value>
            <value>
                <fullName>Adopted</fullName>
            </value>
            <value>
                <fullName>Back to Shelter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>